--- a/Imigration.Web/appsettings.json
+++ b/Imigration.Web/appsettings.json
@@ -1,14 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "ImigrationConnection": "Data Source=.; initial Catalog = ImigrationDataBase; Integrated Security= True"
 
-    }
+    },
+    "GoogleRecaptcha:SiteKey": "6LfmNyYqAAAAALtmDgM_xCptd7lsHdjojauReDHU",
+    "GoogleRecaptcha:SecretKey": "6LfmNyYqAAAAABiLnCDm92-5QqRt5uon6U8eocfP"
 
 }
