--- a/Imigration.Application/Imigration.Application.csproj
+++ b/Imigration.Application/Imigration.Application.csproj
@@ -9,7 +9,11 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="Convertors\" />
-    <Folder Include="Generators\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="HtmlSanitizer" Version="8.1.870" />
+    <PackageReference Include="System.CodeDom" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
