--- a/Imigration.Web/Imigration.Web.csproj
+++ b/Imigration.Web/Imigration.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GoogleReCaptcha.V3" Version="1.3.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
 
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
