--- a/Imigration.Application/Imigration.Application.csproj
+++ b/Imigration.Application/Imigration.Application.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
     <Folder Include="Convertors\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="HtmlSanitizer" Version="8.1.870" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="System.CodeDom" Version="4.4.0" />
   </ItemGroup>
 
