--- a/Imigration.Web/Imigration.Web.csproj
+++ b/Imigration.Web/Imigration.Web.csproj
@@ -7,8 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\common\custom\custom.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\common\custom\custom.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\common\custom\custom.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="GoogleReCaptcha.V3" Version="1.3.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.17" />
 
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
