--- a/Imigration.Web/Imigration.Web.csproj
+++ b/Imigration.Web/Imigration.Web.csproj
@@ -15,7 +15,78 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\common\ckeditor\build\ckeditor.js" />
+    <None Include="wwwroot\common\ckeditor\build\ckeditor.js.map" />
+    <None Include="wwwroot\common\ckeditor\build\translations\af.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ar.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ast.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\az.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\bg.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\bs.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ca.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\cs.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\da.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\de-ch.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\de.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\el.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\en-au.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\en-gb.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\en.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\eo.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\es.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\et.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\eu.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\fi.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\fr.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\gl.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\gu.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\he.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\hi.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\hr.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\hu.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\id.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\it.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ja.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\kk.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\km.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\kn.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ko.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ku.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\lt.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\lv.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\nb.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ne.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\nl.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\no.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\oc.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\pl.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\pt-br.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\pt.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ro.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ru.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\si.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\sk.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\sl.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\sq.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\sr-latn.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\sr.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\sv.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\th.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\tk.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\tr.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\tt.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\ug.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\uk.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\uz.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\vi.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\zh-cn.js" />
+    <None Include="wwwroot\common\ckeditor\build\translations\zh.js" />
+    <None Include="wwwroot\common\ckeditor\LICENSE.md" />
+    <None Include="wwwroot\common\ckeditor\README.md" />
+    <None Include="wwwroot\common\ckeditor\src\ckeditor.js" />
+    <None Include="wwwroot\common\ckeditor\webpack.config.js" />
     <None Include="wwwroot\common\custom\custom.js" />
+    <None Include="wwwroot\common\magicsuggest\magicsuggest.js" />
   </ItemGroup>
 
   <ItemGroup>
