--- a/Imigration.Web/appsettings.json
+++ b/Imigration.Web/appsettings.json
@@ -11,6 +11,14 @@
 
     },
     "GoogleRecaptcha:SiteKey": "6LfmNyYqAAAAALtmDgM_xCptd7lsHdjojauReDHU",
-    "GoogleRecaptcha:SecretKey": "6LfmNyYqAAAAABiLnCDm92-5QqRt5uon6U8eocfP"
+    "GoogleRecaptcha:SecretKey": "6LfmNyYqAAAAABiLnCDm92-5QqRt5uon6U8eocfP",
+    "ScoreManagement ": {
+        "MinRequestsCountForVerifyTag": 3,
+        "AddNewQuestionScrore": 10,
+        "MinScoreForBronzeMedal": 30,
+        "MinScoreForSilverMedal": 50,
+        "MinScoreForGoldMedal": 100
+
+    }
 
 }
