--- a/Imigration.Web/appsettings.json
+++ b/Imigration.Web/appsettings.json
@@ -15,6 +15,7 @@
     "ScoreManagement ": {
         "MinRequestsCountForVerifyTag": 3,
         "AddNewQuestionScrore": 10,
+        "AddNewAnswerScrore": 10,
         "MinScoreForBronzeMedal": 30,
         "MinScoreForSilverMedal": 50,
         "MinScoreForGoldMedal": 100
