--- a/Imigration.Web/appsettings.json
+++ b/Imigration.Web/appsettings.json
@@ -18,7 +18,9 @@
         "AddNewAnswerScrore": 10,
         "MinScoreForBronzeMedal": 30,
         "MinScoreForSilverMedal": 50,
-        "MinScoreForGoldMedal": 100
+        "MinScoreForGoldMedal": 100,
+        "MinScoreForUpScoreAnswer": 10,
+        "MinScoreForDownScoreAnswer": 30
 
     }
 
