--- a/Imigration.Application/Imigration.Application.csproj
+++ b/Imigration.Application/Imigration.Application.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlSanitizer" Version="8.1.870" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.CodeDom" Version="4.4.0" />
   </ItemGroup>
 
