--- a/Imigration.Web/appsettings.json
+++ b/Imigration.Web/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "ImigrationConnection": "Data Source=.; initial Catalog = ImigrationDataBase; Integrated Security= True"
+        "ImigrationConnection": "Data Source=.; initial Catalog = ImigrationDB; Integrated Security= True"
 
     },
     "GoogleRecaptcha:SiteKey": "6LfmNyYqAAAAALtmDgM_xCptd7lsHdjojauReDHU",
